--- a/portfolio.html
+++ b/portfolio.html
@@ -5,23 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <a class="link"
-            href="https://www.figma.com/file/oTYBECAN79dXy19hzWObO4/Web-Studio-(Version-2.1)?node-id=1%3A3">WebStudio</a>
+        <a class="link" href="" class="link" href="">WebStudio</a>
         <nav>
             <ul class="list">
-                <li><a class="link" href="">Студия</a></li>
-                <li><a class="link" href="">Портфолио</a></li>
-                <li><a class="link" href="">Контакты</a></li>
+                <li><a class="link" href="" class="link" href="">Студия</a></li>
+                <li><a class="link" href="" class="link" href="">Портфолио</a></li>
+                <li><a class="link" href="" class="link" href="">Контакты</a></li>
             </ul>
         </nav>
         
         <div>
-            <a class="link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-            <a class="link" href="info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="" class="link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a class="link" href="" class="link" href="info@devstudio.com">info@devstudio.com</a>
         </div>
     </header>
 
@@ -29,11 +32,11 @@
     <main>
         <section>
             <ul class="list">
-                <li><a href=""></a>Все</li>
-                <li><a href=""></a>Веб-сайты</li>
-                <li><a href=""></a>Приложения</li>
-                <li><a href=""></a>Дизайн</li>
-                <li><a href=""></a>Маркетинг</li>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
             </ul>
         </section>
 
@@ -92,13 +95,13 @@
 
 
     <footer>
-        <a class="link"
+        <a class="link" href="" class="link"
             href="https://www.figma.com/file/oTYBECAN79dXy19hzWObO4/Web-Studio-(Version-2.1)?node-id=1%3A3">WebStudio</a>
-        <a class="link" ddress>г. Киев, пр-т Леси Украинки, 26</address>
+        <a class="link" href="" class="link" ddress>г. Киев, пр-т Леси Украинки, 26</address>
 
-            <a class="link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a class="link" href="" class="link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
 
-            <a class="link" href="info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="" class="link" href="info@devstudio.com">info@devstudio.com</a>
 
     </footer>
 </body>
