--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
 
     <footer>
         <a class="link" href="" class="link"
-            href="https://www.figma.com/file/oTYBECAN79dXy19hzWObO4/Web-Studio-(Version-2.1)?node-id=1%3A3">WebStudio</a>
+            href="">WebStudio</a>
         <a class="link" href="" class="link" ddress>г. Киев, пр-т Леси Украинки, 26</address>
 
             <a class="link" href="" class="link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
