--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="link" href="">WebStudio</a>
+        <a class="link logo" href="">WebStudio</a>
         <nav class="header-nav">
             <ul class="list header-list">
                 <li class="header-item"><a class="link header-link" href="">Студия</a></li>
