--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
         <a class="link" href="" class="link" href="">WebStudio</a>
         <nav>
             <ul class="list">
-                <li><a class="link" href="" class="link" href="">Студия</a></li>
-                <li><a class="link" href="" class="link" href="">Портфолио</a></li>
+                <li><a class="link" href="" class="link" href="/index.html">Студия</a></li>
+                <li><a class="link" href="" class="link" href="/portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="" class="link" href="">Контакты</a></li>
             </ul>
         </nav>
