--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="link logo" href="">WebStudio</a>
+        <a class="link logo" href=""><span class="logo-color">Web</span>Studio</a>
         <nav class="header-nav">
             <ul class="list header-list">
                 <li class="header-item"><a class="link header-link" href="/index.html">Студия</a></li>
@@ -100,7 +100,7 @@
 
 
     <footer class="footer">
-        <a class="link footer-logo" href="">WebStudio</a>
+        <a class="link footer-logo" href=""><span class="logo-color">Web</span>Studio</a>
         <a class="link-adress">г. Киев, пр-т Леси Украинки, 26</address>
         
         <a class="link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
