link + portfolio-btn

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,9 +98,9 @@
         <a class="link footer-logo" href=""><span class="logo-color">Web</span>Studio</a>
         <a class="link-adress">г. Киев, пр-т Леси Украинки, 26</address>
     
-            <a class="link link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a class="link footer-link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
             
-            <a class="link link-mail" href="info@devstudio.com">info@devstudio.com</a>
+            <a class="link footer-link-mail" href="info@devstudio.com">info@devstudio.com</a>
     </footer>
 </body>
 </html>
