--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <section class="under-header">
             <h1 class="under-header-h1">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="under-header-btn">Заказать услугу</button>
+            <button type="button" class="button under-header-btn">Заказать услугу</button>
         </section>
         
         <section class="section">
