--- a/portfolio.html
+++ b/portfolio.html
@@ -34,11 +34,11 @@
     <main class="portfolio">
         <section>
             <ul class="list">
-                <li><button type="button" class="portfolio-btn" >Все</button></li>
-                <li><button type="button" class="portfolio-btn" >Веб-сайты</button></li>
-                <li><button type="button" class="portfolio-btn" >Приложения</button></li>
-                <li><button type="button" class="portfolio-btn" >Дизайн</button></li>
-                <li><button type="button" class="portfolio-btn" >Маркетинг</button></li>
+                <li><button type="button" class="button portfolio-btn" >Все</button></li>
+                <li><button type="button" class="button portfolio-btn" >Веб-сайты</button></li>
+                <li><button type="button" class="button portfolio-btn" >Приложения</button></li>
+                <li><button type="button" class="button portfolio-btn" >Дизайн</button></li>
+                <li><button type="button" class="button portfolio-btn" >Маркетинг</button></li>
             </ul>
         
             <ul class="list">
