--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
             <a class="link logo" href=""><span class="logo-color">Web</span>Studio</a>
             <nav class="header-nav">
                 <ul class="list header-list">
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
 
-            <div>
+            <div class="heder-connect">
                 <a class="link link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
                 <a class="link link-mail" href="info@devstudio.com">info@devstudio.com</a>
             </div>
