--- a/index.html
+++ b/index.html
@@ -26,24 +26,25 @@
                 </ul>
             </nav>
 
-            <div class="heder-connect">
-                <a class="link link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <div class="header-connect">
                 <a class="link link-mail" href="info@devstudio.com">info@devstudio.com</a>
+                <a class="link link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                
             </div>
         </div>
     </header>
 
 
     <main>
-        <div class="container">
-            <section class="under-header">
+        <div class="under-header">
+            <section class="container">
                 <h1 class="under-header-h1">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="under-header-btn">Заказать услугу</button>
             </section>
         </div>
         <div class="container">
             <section class="section">
-                <ul class="list">
+                <ul class="list list-section">
                     <li>
                         <h3 class="section-item">Внимание к деталям</h3>
                         <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -69,36 +70,44 @@
         <div class="container">
             <section class="activity">
                 <h2 class="activity-title">Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li><img src="./images/img1.jpg" alt="деятельность1" width="370" height="295"></li>
-                    <li><img src="./images/img2.jpg" alt="деятельность2" width="370" height="295"></li>
-                    <li><img src="./images/img3.jpg" alt="деятельность3" width="370" height="295"></li>
+                <ul class="list list-activity">
+                    <li class="activity-img"><img src="./images/img1.jpg" alt="деятельность1" width="370" height="295"></li>
+                    <li class="activity-img"><img src="./images/img2.jpg" alt="деятельность2" width="370" height="295"></li>
+                    <li class="activity-img"><img src="./images/img3.jpg" alt="деятельность3" width="370" height="295"></li>
                 </ul>
             </section>
         </div>
         <div class="container">
             <section class="team">
                 <h2 class="team-title">Наша команда</h2>
-                    <ul class="list">
-                        <li>
+                    <ul class="list list-team">
+                        <li class="team-card">
                             <img src="./images/productdesigner.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                            <p class="team-name">Игорь Демьяненко</p> 
-                            <p class="team-position" lang="en">Product Designer</p>
+                                <div class="team-info">
+                                <p class="team-name">Игорь Демьяненко</p> 
+                                <p class="team-position" lang="en">Product Designer</p>
+                                </div>
                         </li>
-                        <li>
+                        <li class="team-card">
                             <img src="./images/frontenddeveloper.jpg" alt="Ольга Репина" width="270" height="260">
-                            <p class="team-name">Ольга Репина</p> 
-                            <p class="team-position" lang="en">Frontend Developer</p>
+                                <div class="team-info">
+                                <p class="team-name">Ольга Репина</p> 
+                                <p class="team-position" lang="en">Frontend Developer</p>
+                                </div>
                         </li>
-                        <li>
+                        <li class="team-card">
                             <img src="./images/marketing.jpg" alt="Николай Тарасов" width="270" height="260">
-                            <p class="team-name">Николай Тарасов</p>
-                            <p class="team-position" lang="en">Marketing</p>
+                                <div class="team-info">
+                                <p class="team-name">Николай Тарасов</p>
+                                <p class="team-position" lang="en">Marketing</p>
+                                </div>
                         </li>
-                        <li>
+                        <li class="team-card">
                             <img src="./images/uidesigner.jpg" alt="Михаил Ермаков" width="270" height="260">
-                            <p class="team-name">Михаил Ермаков</p>
-                            <p class="team-position" lang="en">UI Desidivner</p>
+                                <div class="team-info">
+                                <p class="team-name">Михаил Ермаков</p>
+                                <p class="team-position" lang="en">UI Desidivner</p>
+                                </div>
                         </li>
                     </ul>
             </section>
