--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="under-header">
             <section class="container">
                 <h1 class="under-header-h1">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="under-header-btn">Заказать услугу</button>
+                <button type="button" class="under-header-btn btn-position">Заказать услугу</button>
             </section>
         </div>
         <div class="container">
