flex - footer portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,22 +66,22 @@
                         <img src="./images/restaurant.jpg" alt="restaurant" width="370" height="295">
                         <div class="work-text">
                         <p class="portfolio-title" >Ресторан Seafood</p>
-                        <p class="portfolio-text" >Приложение</
-                        </div>p>
+                        <p class="portfolio-text" >Приложение</p>
+                        </div>
                     </li>
                     <li class="work">
                         <img src="./images/earphone.jpg" alt="earphone" width="370" height="295">
                         <div class="work-text">
                         <p class="portfolio-title" >Проект Prime</p>
-                        <p class="portfolio-text" >Маркетинг</p
-                        </div>>
+                        <p class="portfolio-text" >Маркетинг</p>
+                        </div>
                     </li>
                     <li class="work">
                         <img src="./images/boxes.jpg" alt="boxes" width="370" height="295">
                         <div class="work-text">
                         <p class="portfolio-title" >Проект Boxes</p>
-                        <p class="portfolio-text" >Приложение</
-                        </div>p>
+                        <p class="portfolio-text" >Приложение</p>
+                        </div>
                     </li>
                     <li class="work">
                         <img src="./images/monitor.jpg" alt="monitor" width="370" height="295">
@@ -101,15 +101,15 @@
                         <img src="./images/label.jpg" alt="label" width="370" height="295">
                         <div class="work-text">
                         <p class="portfolio-title" >Проект LAB</p>
-                        <p class="portfolio-text" >Маркетинг</p
-                        </div>>
+                        <p class="portfolio-text" >Маркетинг</p>
+                        </div>
                     </li>
                     <li class="work">
                         <img src="./images/netbook.jpg" alt="netbook" width="370" height="295">
                         <div class="work-text">
                         <p class="portfolio-title" >Growing Business</p>
-                        <p class="portfolio-text" >Приложение</
-                        </div>p>
+                        <p class="portfolio-text" >Приложение</p>
+                        </div>
                     </li>
                     
                 </ul>
@@ -120,11 +120,12 @@
 
     <footer class="footer">
         <div class="container">
-                        <a class="link footer-logo" href=""><span class="logo-color">Web</span>Studio</a>
-            <a class="link-adress">г. Киев, пр-т Леси Украинки, 26</address>
-    
-            <a class="link footer-link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-            <a class="link footer-link-mail" href="info@devstudio.com">info@devstudio.com</a>
+            <a class="link footer-logo" href=""><span class="logo-color">Web</span>Studio</a>
+            <div class="address">
+                <a class="link-adress">г. Киев, пр-т Леси Украинки, 26</address>
+                    <a class="link footer-link-tel" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                    <a class="link footer-link-mail" href="info@devstudio.com">info@devstudio.com</a>
+            </div>
         </div>
     </footer>
 </body>
